cmake_minimum_required(VERSION 3.16)
IF(DEFINED ENV{TRAVIS_BUILD_NUMBER})
ELSE()
    set(ENV{TRAVIS_BUILD_NUMBER} 1)
ENDIF()
project(ipfilter, VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})
find_package(Boost COMPONENTS unit_test_framework REQUIRED)
set(CMAKE_CXX_STANDARD 14)
include_directories(src)
add_subdirectory(src)
